--- a/app/src/main/res/layout/fragment_my_books.xml
+++ b/app/src/main/res/layout/fragment_my_books.xml
@@ -4,6 +4,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/my_books_null"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:id="@+id/tv_book_list_null"
+        android:textStyle="bold"
+        android:visibility="gone"
+        android:fontFamily="sans-serif-black"/>
+
     <include
         android:id="@+id/added_books_layout"
         layout="@layout/base_book_list_layout"/>
