--- a/app/src/main/res/layout-land/activity_random_book.xml
+++ b/app/src/main/res/layout-land/activity_random_book.xml
@@ -102,7 +102,7 @@
                 android:layout_centerVertical="true"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/card_view_random_book"
-                android:drawableStart="@drawable/ic_shuffle"
+                android:drawableStart="@drawable/ic_casino_white_36dp"
                 android:text="@string/random_book_action_button"/>
 
         </RelativeLayout>
